<resources>
    <string name="app_name">Employee_management_system</string>
    <string name="search_criteria">検索条件</string>
    <string name="employee_id">社員ID</string>
    <string name="search">検索</string>
    <string name="name">名前</string>
    <string name="search_result">検索結果</string>
    <string name="insert">追加</string>
    <string name="delete">削除</string>
    <string name="operation">実行内容</string>
    <string name="check_name">Nameの項目が空です</string>
    <string name="check_id">Idの項目が空です</string>
    <string name="return_button">戻る</string>
    <string name="init_textview">init</string>
    <string name="received_data">受取ったデータ</string>
</resources>
