<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_criteria"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_center2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="MissingConstraints,UselessLeaf" />

    <View
        android:id="@+id/line_horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <View
        android:id="@+id/line_horizontal_center2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/search_criteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_criteria"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_center2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/employee_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_id"
        app:layout_constraintBottom_toTopOf="@+id/employee_id_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_criteria"
        app:layout_constraintVertical_bias="0.878" />

    <EditText
        android:id="@+id/employee_id_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/employee_id"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_center2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_criteria"
        app:layout_constraintVertical_bias="0.262"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_center2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_id_editText"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/name_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_id_editText"
        app:layout_constraintVertical_bias="0.842" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_center2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_editText"
        app:layout_constraintVertical_bias="0.4" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="316dp"
        android:layout_height="267dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_horizontal_center2"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/search_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/line_horizontal_center2"
        app:layout_constraintTop_toTopOf="@+id/line_horizontal_center2"
        app:layout_constraintVertical_bias="0.039" />

</androidx.constraintlayout.widget.ConstraintLayout>